[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "meminto"
version = "0.1.0"
description = ""
authors = ["Florian Schepers <florian.schepers@ext.aleph-alpha.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "meminto", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
torchaudio = "^2.2.2"
click = "^8.1.7"
pyannote-audio = "^3.1.1"
tiktoken = "^0.6.0"
transformers = "^4.39.3"
pyannote-pipeline = "^3.0.1"
speechbrain = "0.5.15"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240406"

[[tool.mypy.overrides]]
module = [
    "transformers",
    "huggingface_hub",
    "torchaudio",
    "pyannote.*",
]
ignore_missing_imports = true


